fixes a layout issue in the community section in Firefox

--- a/docs/theme/static/styles/_home-page-body.less
+++ b/docs/theme/static/styles/_home-page-body.less
@@ -610,7 +610,7 @@ body.donejs {
       margin: 0 auto;
       .clearfix;
 
-      @media(max-width: @screen-sm){
+      @media(max-width: @screen-md){
         padding:0 0 50px;
         text-align: center;
         width: auto;
